--- a/index.html
+++ b/index.html
@@ -2,15 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="src/assets/gitlab.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="GitVerse is an interactive Git and GitHub documentation platform with a built-in cheatsheet, commands reference, and developer-friendly explanations to help learners and developers master version control faster." />
-    <meta name="keywords" content="gitverse, git documentation, github documentation, git cheatsheet,
-git commands, version control guide" />
+    <meta
+      name="description"
+      content="GitVerse is an interactive Git and GitHub documentation platform with a built-in cheatsheet, commands reference, and developer-friendly explanations to help learners and developers master version control faster."
+    />
+    <meta
+      name="keywords"
+      content="gitverse, git documentation, github documentation, git cheatsheet,
+git commands, version control guide"
+    />
     <meta name="author" content="Mahi Gajjar" />
-    <meta property="og:image" content="public/git-verse.jpg"/>
-    <meta property="og:title" content="GitVerse"/>
-    <meta property="og:description" content="GitVerse is an interactive Git and GitHub documentation platform with a built-in cheatsheet, commands reference, and developer-friendly explanations to help learners and developers master version control faster."/>
+    <meta property="og:image" content="public/git-verse.jpg" />
+    <meta property="og:title" content="GitVerse" />
+    <meta
+      property="og:description"
+      content="GitVerse is an interactive Git and GitHub documentation platform with a built-in cheatsheet, commands reference, and developer-friendly explanations to help learners and developers master version control faster."
+    />
     <title>GitVerse</title>
   </head>
   <body>
